Overlap and padding/margin corrections

--- a/css/index.css
+++ b/css/index.css
@@ -390,6 +390,7 @@ html, body {
     overflow-y: scroll;
     max-height: 40vh;
     scrollbar-width: none;
+    position: relative;
 }
 
 .my-location-popup::-webkit-scrollbar {
@@ -799,7 +800,6 @@ html, body {
     row-gap: 0.8rem;
     pointer-events: none;
     box-sizing: border-box;
-    padding: 0.5rem;
 }
 
 .panout, .buses-btn, .centerme, .fly-closest-stop, .shoot-fireworks, .satellite-btn {
@@ -865,7 +865,7 @@ html, body {
     touch-action: pan-x;
     padding-top: 1rem;
     /* margin-left: -1rem; */
-    padding-left: 1rem;
+    padding-left: 2rem;
     padding-bottom: 1rem;
     scrollbar-width: none;
     pointer-events: all;
